[package]
name = "artemiss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
dotenvy = "0.15.6"
env_logger = "0.10.0"
figment = { version = "0.10.8", features = ["env"] }
log = "0.4.17"
mysql = "23.0.0"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.149", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
